@@ -28,12 +28,13 @@ is.name <- is.symbol
     baseGenerics <- c("Math", "Ops", "Summary", "Complex",
         "as.character", "as.data.frame", "as.environment", "as.matrix", "as.vector",
         "cbind", "labels", "print", "rbind", "rep", "seq", "seq.int",
-        "sequence", "solve", "summary", "t")
+        "plot", "sequence", "solve", "summary", "t")
 
     utilsGenerics <- c("edit", "str")
 
     graphicsGenerics <- c("contour", "hist", "identify", "image",
-        "lines", "pairs", "plot", "points", "text")
+        ## "plot", 
+        "lines", "pairs", "points", "text")
 
     statsGenerics <- c("add1", "AIC", "anova", "biplot", "coef",
         "confint", "deviance", "df.residual", "drop1", "extractAIC",
