@@ -17,7 +17,8 @@ export(abline, arrows, assocplot, axTicks, Axis, axis, axis.Date,
        erase.screen, filled.contour, fourfoldplot, frame, grconvertX,
        grconvertY, grid, hist, identify, image, layout, layout.show,
        lcm, legend, lines, locator, matlines, matplot, matpoints,
-       mosaicplot, mtext, pairs, panel.smooth, par, persp, pie, plot,
+       mosaicplot, mtext, pairs, panel.smooth, par, persp, pie, 
+       plot,
        plot.design, plot.function, plot.new, plot.window, plot.xy,
        points, polygon, polypath, rasterImage, rect, rug, screen,
        segments, smoothScatter, spineplot, split.screen, stars, stem,
